# PictureViewer

./: PictureViewer.pro  README.md  database.sh  install-images.sh  install-imebra.sh  main.cpp  run.sh  setup-db.sh
data-creator/: CopyPatientInfo.cpp  ReplacePatientInfo.cpp  run.sh
imebra/: .gitignore  CMakeLists.txt  appveyor.yml  bitbucket-pipelines.yml  build.xml  getVersion.py  readme.rst
imebra/docs/: Doxyfile  Makefile  acse_classes.rst  add_to_project.rst  build_distribution.rst  changes_log.rst  commercial.rst  compiling_imebra.rst  conf.py  copyright.rst  definition_classes.rst  dicom_data_classes.rst  dicom_dictionary_classes.rst  dicom_uid_generation_classes.rst  dicomdir_classes.rst  dimse_classes.rst  download.rst  doxygenLayout.xml  exception_classes.rst  gplv2.rst  imaging_classes.rst  imebra.mdj  imebra_requirements.xml  index.html  index.rst  introduction.rst  logging.rst  memory_management_classes.rst  migration_guide.rst  objects_lifecycle.rst  pipe_classes.rst  quick_tour.rst  riskAnalysis.xsd  risks_requirements.rst  sop.rst  stream_classes.rst  tcp_classes.rst  transforms_classes.rst  validation.rst
imebra/docs/templates/: footer.1.7.5.1.html  header.1.7.5.1.html
imebra/examples/c++/changeTransferSyntax/: changeTransferSyntax.cpp
imebra/examples/c++/dicom2jpeg/: dicom2jpeg.cpp
imebra/examples/c++/dicomdirItems/: dicomdirItems.cpp
imebra/examples/c++/scpExample/: scpExample.cpp
imebra/examples/swift/: cmove.swift
imebra/include/imebra/: baseStreamOutput.h  codecFactory.h  definitions.h  dicomDirEntry.h  fileStreamOutput.h  image.h  memoryStreamOutput.h  readingDataHandler.h  tagId.h  writingDataHandler.h
imebra/lib/: libimebra.so.5
imebra/tests/: CImbx_tests.cpp  acseTest.cpp  bitTransformTest.cpp  buildImageForTest.cpp  buildImageForTest.h  colorConversionTest.cpp  corruptedFilesTest.cpp  dataSetTest.cpp  dateTimeHandlerTest.cpp  dicomCodecTest.cpp  dicomDictionaryTest.cpp  dicomDirTest.cpp  dimseTest.cpp  drawBitmapTest.cpp  exceptionsTest.cpp  jpegCodecTest.cpp  lutTest.cpp  memoryTest.cpp  modalityVoilutTests.cpp  multipleImagesTest.cpp  numericHandlerTest.cpp  paletteTest.cpp  pipeTest.cpp  streamTest.cpp  stringHandlerTest.cpp  tcpTest.cpp  testsSettings.cpp  testsSettings.h  transformsChainTest.cpp  uidGeneratorsTest.cpp  unicodeStringHandlerTest.cpp  voilutTests.cpp
imebra/tests/corruptedfiles/: id_000000_sig_11_src_000000_op_flip1_pos_21641  id_000000_sig_11_src_000000_op_flip1_pos_508  id_000001_sig_11_src_000000_op_flip1_pos_508  id_000001_sig_11_src_000000_op_flip4_pos_21641  id_000002_sig_11_src_000000_op_flip1_pos_508  id_000003_sig_06_src_000000_op_flip1_pos_559
imebra/tests/java/src/com/imebra/tests/: ImebraTests.java
imebra/tests/objectivec/: objectivecTest.mm
imebra/tests/python/: tests.py
imebra/wrappers/: swig.i
imebra/wrappers/javaWrapper/: AndroidManifest.xml  build.gradle  gradlew.bat
imebra/wrappers/javaWrapper/gradle/wrapper/: gradle-wrapper.properties
imebra/wrappers/javaWrapper/jni/: Android.mk
imebra/wrappers/objectivec/include/imebraobjc/: imebra.h  imebra_VOIDescription.h  imebra_VOILUT.h  imebra_acse.h  imebra_baseStreamInput.h  imebra_baseStreamOutput.h  imebra_baseUidGenerator.h  imebra_codecFactory.h  imebra_colorTransformsFactory.h  imebra_dataset.h  imebra_dateAge.h  imebra_dicomDictionary.h  imebra_dicomDir.h  imebra_dimse.h  imebra_drawBitmap.h  imebra_exceptions.h  imebra_fileStreamInput.h  imebra_fileStreamOutput.h  imebra_image.h  imebra_lut.h  imebra_macros.h  imebra_memoryPool.h  imebra_memoryStreamInput.h  imebra_memoryStreamOutput.h  imebra_modalityVOILUT.h  imebra_overlay.h  imebra_patientName.h  imebra_pipe.h  imebra_randomUidGenerator.h  imebra_readMemory.h  imebra_readWriteMemory.h  imebra_readingDataHandler.h  imebra_readingDataHandlerNumeric.h  imebra_serialNumberUidGenerator.h  imebra_streamReader.h  imebra_streamWriter.h  imebra_swift.h  imebra_tag.h  imebra_tagId.h  imebra_tcpAddress.h  (+10 more)
imebra/wrappers/objectivec/src/: imebra_VOIDescription.mm  imebra_VOILUT.mm  imebra_acse.mm  imebra_baseStreamInput.mm  imebra_baseStreamOutput.mm  imebra_baseUidGenerator.mm  imebra_codecFactory.mm  imebra_colorTransformsFactory.mm  imebra_dataset.mm  imebra_dateAge.mm  imebra_dicomDictionary.mm  imebra_dicomDir.mm  imebra_dimse.mm  imebra_drawBitmap.mm  imebra_exceptions.mm  imebra_fileStreamInput.mm  imebra_fileStreamOutput.mm  imebra_image.mm  imebra_implementation_macros.h  imebra_lut.mm  imebra_memoryPool.mm  imebra_memoryStreamInput.mm  imebra_memoryStreamOutput.mm  imebra_modalityVOILUT.mm  imebra_nserror.h  imebra_nserror.mm  imebra_overlay.mm  imebra_patientName.mm  imebra_pipe.mm  imebra_randomUidGenerator.mm  imebra_readMemory.mm  imebra_readWriteMemory.mm  imebra_readingDataHandler.mm  imebra_readingDataHandlerNumeric.mm  imebra_serialNumberUidGenerator.mm  imebra_streamReader.mm  imebra_streamWriter.mm  imebra_strings.h  imebra_strings.mm  imebra_tag.mm  (+10 more)
imebratest/: .gitignore  main.cpp  prg  run.sh
src/: CopyPatientInfo.cpp  Database.cpp  Database.h  DatabaseConnection.cpp  DatabaseConnection.h  DatabaseCreator.h  DatabaseSetuper.h  DicomImageProvider.cpp  DicomImageProvider.h  DicomImporter.cpp  DicomImporter.h  DicomTableModel.cpp  DicomTableModel.h  ReplacePatientInfo.cpp  app.qrc  database.cpp  database.h  main.cpp  main.qml  setupdb.sql
src/Components/: FileListItem.qml  TableItem.qml
